# ttkbwidgets

./: AUTHORS.txt  LICENSE.txt  README.rst  pyproject.toml
ttkbwidgets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
widgets/: ttkb_validators.py  ttkb_widgets.py
